plugins {
	id 'net.fabricmc.fabric-loom' version "${loom_version}"
}

version = project.mod_version
group = ""

loom {
	decompilerOptions.named("vineflower") {
		options.put("mark-corresponding-synthetics", "1") // Adds names to lambdas - useful for mixins
	}
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	implementation "net.fabricmc:fabric-loader:${project.loader_version}"
	implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": inputs.properties.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

java {
	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	inputs.property "projectName", project.name

	from("LICENSE") {
		rename { "${it}_${project.name}"}
	}
}

tasks.withType(JavaExec).configureEach {
	jvmArgs = jvmArgs.findAll { it != "--sun-misc-unsafe-memory-access=allow" }
}

